server restarted after expr:{"expr":"_currentApplyOps.getArrayLength() > 0","file":"src/mongo/db/pipeline/document_source_change_stream_transform.cpp","line":535}}

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.4, v4.2
    • Query 2020-11-30, Query 2020-12-14, Query 2020-12-28, Query 2021-01-11, Query 2021-01-25
    • None
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We used an application named monstache with mongo-go-driver v1.4.1 to watch change streams from replica ret with mongods of  v4.4.0. And the whole system works well for a few weeks but the primary mongod restarted frequently after we started to use transaction with java-go-driver.

      We tried the following conditions to check the cause:

      1. when the server restarted frequently, we check the connection status between host:post and not this
      2. We checked and ensured that the wach apis of mongo-go-driver are used correctly
      3. The mongo processes are started with systemd and we add the remommended ulimits in the systemd service.  And we created 500 mongoClient instances and ran our transaction unit tests with monstache running but the mongo didn't restart. 

      However sometimes the mongod restarted all of a sudden.

       

      Below are the logs and the key words are "SERVER RESTARTED" and the "ctx":"connXXX" which is generated by mongo-go-driver used by monstache and the printed BACKTRACE and Invariant failure.

      mongod-shard2.log

      mongod-data-1-shard2.log

        1. mongod-data-1-shard2.log
          11.32 MB
        2. mongod-shard2.log
          12.24 MB

              Assignee:
              Justin Seyster
              Reporter:
              jeason chan
              Votes:
              0 Vote for this issue
              Watchers:
              17 Start watching this issue

                Created:
                Updated:
                Resolved: