SERVER-50769 Change streams no longer balk at empty applyOps

(cherry picked from commit e9122ba5078eca4fbc7ea858221dba6af00e90a9)